--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
                 <p>UI / UX DESIGNc</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nice_page.jpg" data-gall="portfolioGallery" class="venobox" title="나이스페이"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <!--<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                 <a href="nicepay/index.html"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -364,7 +365,8 @@
                 <p>CAFE 24</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cafe24.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+               <!--<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                  <a href="http://skin-skin10.tt100201.cafe24.com"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
