--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <img src="assets/img/portfolio/nice_pay_real.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>나이스페이</h4>
-                <p>UI / UX DESIGNc</p>
+                <p>UI / UX DESIGN</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nice_page.jpg" data-gall="portfolioGallery" class="venobox" title="나이스페이"><i class="bx bx-plus"></i></a>
                   <!--  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
