--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
   <!-- Google Fonts -->
 
@@ -60,7 +61,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Brandon Johnson</h1>
+      <h1>Welcome To My Portfolio</h1>
       <p>안녕하세요. <span class="typed" data-typed-items="저는 따뜻한 감성으로 소통하는, 웹디자이너 강성경입니다."></span></p>
      <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -377,7 +378,7 @@
               <img src="assets/img/portfolio/logo_img.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>소원한우</h4>
-                <p>Branding</p>
+                <p>LOGO</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/logo_page.jpg" data-gall="portfolioGallery" class="venobox" title="소원한우"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
@@ -391,9 +392,9 @@
               <img src="assets/img/portfolio/card.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>카드뉴스</h4>
-                <p>Graphic</p>
+                <p>CARD NEWS</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/card_page.jpg" data-gall="portfolioGallery" class="venobox" title="카드뉴스"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/card_page.jpg" data-gall="portfolioGallery" class="venobox" title="3030 영어"><i class="bx bx-plus"></i></a>
               <!--    <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -405,9 +406,9 @@
               <img src="assets/img/portfolio/popup.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>키 ＆ 성장 다이어트 프로젝트</h4>
-                <p>Graphic</p>
+                <p>POPUP</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/popup_page.jpg" data-gall="portfolioGallery" class="venobox" title="팝업광고 디자인"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/popup_page.jpg" data-gall="portfolioGallery" class="venobox" title="키 ＆ 성장 다이어트 프로젝트"><i class="bx bx-plus"></i></a>
               <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -419,9 +420,9 @@
               <img src="assets/img/portfolio/popup_sho.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>선물 다 가정 이벤트</h4>
-                <p>Graphic</p>
+                <p>POPUP</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/popup_sho_n.jpg" data-gall="portfolioGallery" class="venobox" title="팝업광고 디자인"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/popup_sho_n.jpg" data-gall="portfolioGallery" class="venobox" title="선물 다 가정 이벤트"><i class="bx bx-plus"></i></a>
             <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -433,9 +434,9 @@
               <img src="assets/img/portfolio/popup_fes.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>가야문화축제</h4>
-                <p>Graphic</p>
+                <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/popup_fes_n.jpg" data-gall="portfolioGallery" class="venobox" title="광고 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/popup_fes_n.jpg" data-gall="portfolioGallery" class="venobox" title="가야문화축제"><i class="bx bx-plus"></i></a>
                 <!--  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -447,9 +448,9 @@
               <img src="assets/img/portfolio/popup_free.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>립스틱 무료배송</h4>
-                <p>Graphic</p>
+                <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/popup_free_n.jpg" data-gall="portfolioGallery" class="venobox" title="광고 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/popup_free_n.jpg" data-gall="portfolioGallery" class="venobox" title="립스틱 무료배송"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -460,9 +461,9 @@
               <img src="assets/img/portfolio/banner.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>쏘네츄럴 비건토너</h4>
-                <p>Graphic</p>
+                <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/banner_n.jpg" data-gall="portfolioGallery" class="venobox" title="메인 슬라이드 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/banner_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘네츄럴 비건토너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -473,9 +474,9 @@
               <img src="assets/img/portfolio/banner_pin.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>쏘네츄럴 수분패드</h4>
-                <p>Graphic</p>
+                <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/banner_pin_n.jpg" data-gall="portfolioGallery" class="venobox" title="메인 슬라이드 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/banner_pin_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘네츄럴 수분패드"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -486,9 +487,9 @@
               <img src="assets/img/portfolio/landing.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>건강음료 신규 이벤트</h4>
-                <p>Graphic</p>
+                <p>landing page</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/landing_n.jpg" data-gall="portfolioGallery" class="venobox" title="랜딩 페이지"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/landing_n.jpg" data-gall="portfolioGallery" class="venobox" title="건강음료 신규 이벤트"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
