--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title강성경 포트폴리오</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="강성경 포트폴리오입니다." name="강성경 포트폴리오">
+  <meta content="웹디자이너, 포트폴리오" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -38,7 +38,6 @@
 </head>
 
 <body>
-
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
