--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><strong></strong></li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1994. 04. 30.</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1994. 04</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> tt100201@naver.com</li> 
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 010 2378 3387</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> 경상남도 김해시</li>
@@ -169,7 +169,7 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section> End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -594,7 +594,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
  <!--   <section id="testimonials" class="testimonials section-bg">
@@ -664,7 +664,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> End Testimonials Section -->
 
     <!-- ======= Contact Section ======= --> <!--
     <section id="contact" class="contact">
