--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/iloom_page.jpg" data-gall="portfolioGallery" class="venobox" title="일룸"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                  <a href="iloom/index.html"><i class="bx bx-link"></i></a>
+                  <a href="iloom/index.html" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -351,7 +351,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nice_page.jpg" data-gall="portfolioGallery" class="venobox" title="나이스페이"><i class="bx bx-plus"></i></a>
                   <!--  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                 <a href="nicepay/index.html"><i class="bx bx-link"></i></a>
+                 <a href="nicepay/index.html"  target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -366,7 +366,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cafe24.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                  <a href="http://skin-skin10.tt100201.cafe24.com"><i class="bx bx-link"></i></a>
+                  <a href="http://skin-skin10.tt100201.cafe24.com"  target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -489,6 +489,58 @@
                 <p>landing page</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/landing_n.jpg" data-gall="portfolioGallery" class="venobox" title="건강음료 신규 이벤트"><i class="bx bx-plus"></i></a>
+                 <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cafe24_banner_n.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>쏘플라이어</h4>
+                <p>BANNER</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/cafe24_banner.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 메인 슬라이드 배너"><i class="bx bx-plus"></i></a>
+                 <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cafe24_banner_f.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>쏘플라이어</h4>
+                <p>BANNER</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/cafe24_banner_f_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
+                 <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cafe24_banner_b.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>쏘플라이어</h4>
+                <p>BANNER</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/cafe24_banner_b_t.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
+                 <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cafe24_banner_g.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>쏘플라이어</h4>
+                <p>BANNER</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/cafe24_banner_g_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
