--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cafe24_banner_n.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>쏘플라이어</h4>
+                <h4>쏘라이플라워</h4>
                 <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/cafe24_banner.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 메인 슬라이드 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/cafe24_banner.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워 메인 슬라이드 배너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -511,10 +511,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cafe24_banner_f.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>쏘플라이어</h4>
+                <h4>쏘라이플라워</h4>
                 <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/cafe24_banner_f_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/cafe24_banner_f_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워 배너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -524,10 +524,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cafe24_banner_b.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>쏘플라이어</h4>
+                <h4>쏘라이플라워</h4>
                 <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/cafe24_banner_b_t.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/cafe24_banner_b_t.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워 배너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -537,10 +537,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cafe24_banner_g.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>쏘플라이어</h4>
+                <h4>쏘라이플라워</h4>
                 <p>BANNER</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/cafe24_banner_g_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘플라이어 배너"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/cafe24_banner_g_n.jpg" data-gall="portfolioGallery" class="venobox" title="쏘라이플라워 배너"><i class="bx bx-plus"></i></a>
                  <!-- <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
